Add optmized Dockerfile